--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
       href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css"
     />
   </head>
-
+  <div id="preloader" class="preloader">
+      <img src="./img/favicons/favicon-32x32.png" alt="Loading..." class="spinner">
+    </div>
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary position-fixed w-100">
       <div class="container-md">
@@ -349,29 +351,25 @@
               </p>
             </div>
             <div class="flx1-item">
-              <ul>
-                <li>
-                  <h5 class="h3">Save Time</h5>
-                </li>
-                <li>
+              <span><h5 class="h3">Save Time</h5></span>
+                <span>
                   <p class="text-body-tertiary">
                     <i class="fa-regular fa-circle-check"></i>intuitive process
                     and single interface
                   </p>
-                </li>
-                <li>
+                </span>
+                <span>
                   <p class="text-body-tertiary">
                     <i class="fa-regular fa-circle-check"></i>Online and
                     paperless
                   </p>
-                </li>
-                <li>
+                </span>
+                <span>
                   <p class="text-body-tertiary">
                     <i class="fa-regular fa-circle-check"></i>Real-time
                     notification
                   </p>
-                </li>
-              </ul>
+                </span>
             </div>
           </div>
           <div class="img-wrapping-flex">
@@ -380,53 +378,49 @@
         </div>
         <div class="flx-container">
           <div class="flx2">
-            <ul>
-              <li>
+              <span>
                 <h5 class="h3">Monitor your expenses</h5>
-              </li>
-              <li>
+              </span>
+              <span>
                 <p class="text-body-tertiary">
                   <i class="fa-regular fa-circle-check"></i>Specific
                   access/rights by users
                 </p>
-              </li>
-              <li>
+              </span>
+              <span>
                 <p class="text-body-tertiary">
                   <i class="fa-regular fa-circle-check"></i>Physical and virtual
                   Mastercards with adjestable payment limits
                 </p>
-              </li>
-              <li>
+              </span>
+              <span>
                 <p class="text-body-tertiary">
                   <i class="fa-regular fa-circle-check"></i>Dashboards to
                   follow-up on your expenses
                 </p>
-              </li>
-            </ul>
+              </span>
           </div>
           <div class="flx2">
-            <ul>
-              <li>
+              <span>
                 <h5 class="h3">Make accounting easier</h5>
-              </li>
-              <li>
+              </span>
+              <span>
                 <p class="text-body-tertiary">
                   <i class="fa-regular fa-circle-check"></i>Unlimited history
                 </p>
-              </li>
-              <li>
+              </span>
+              <span>
                 <p class="text-body-tertiary">
                   <i class="fa-regular fa-circle-check"></i>REad-only access for
                   your accountant
                 </p>
-              </li>
-              <li>
+              </span>
+              <span>
                 <p class="text-body-tertiary">
                   <i class="fa-regular fa-circle-check"></i>Plug-and-play for
                   accounting tools
                 </p>
-              </li>
-            </ul>
+              </span>
           </div>
         </div>
       </div>
@@ -513,5 +507,6 @@
     </footer>
 
     <script src="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="./script.js"></script>
   </body>
 </html>
